WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27294
REGRESSION: fast/js/postfix-syntax.html fails with interpreter
https://bugs.webkit.org/show_bug.cgi?id=27294
Summary
REGRESSION: fast/js/postfix-syntax.html fails with interpreter
Simon Hausmann
Reported
2009-07-15 03:46:26 PDT
The above test fails when run with the interpreter but succeeds with the jit. The following simplyer testcase reproduces the bug: var x = 0; x = x++; print(x) without the "var" the script prints "0", with "var" it prints incorrectly "1".
Attachments
fixeration!
(56.95 KB, patch)
2009-07-15 04:24 PDT
,
Oliver Hunt
no flags
Details
Formatted Diff
Diff
attach patch instead of the changelog
(1.60 KB, patch)
2009-07-15 04:53 PDT
,
Oliver Hunt
hausmann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-07-15 04:24:01 PDT
Created
attachment 32776
[details]
fixeration!
Oliver Hunt
Comment 2
2009-07-15 04:53:46 PDT
Created
attachment 32778
[details]
attach patch instead of the changelog
Simon Hausmann
Comment 3
2009-07-15 05:13:34 PDT
Comment on
attachment 32778
[details]
attach patch instead of the changelog r=me
Oliver Hunt
Comment 4
2009-07-15 05:17:03 PDT
Committed
r45904
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug