REGRESSION: fast/js/postfix-syntax.html fails with interpreter https://bugs.webkit.org/show_bug.cgi?id=27294

Reviewed by Simon Hausmann.

When postfix operators operating on locals assign to the same local
the order of operations has to be to store the incremented value, then
store the unmodified number.  Rather than implementing this subtle
semantic in the interpreter I've just made the logic explicit in the
bytecode generator, so x=x++ effectively becomes x=ToNumber(x) (for a
local var x).


Canonical link: https://commits.webkit.org/37534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45904 268f45cc-cd09-0410-ab3c-d52691b4dbfc